--- a/README
+++ b/README
@@ -1,4 +1,13 @@
 Python bindings for whisper.cpp
 ===============================
 
+`pip install git+https://github.com/o4dev/whispercpp.py`
 
+```python
+from whispercpp import Whisper
+
+w = Whisper('tiny')
+
+result = w.transcribe("myfile.mp3")
+text = w.extract_text(result)
+```
